(cambio en la clase modo_romance)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <div class="modo_sexo">
-            <h1>Modo Sexo Activado</h1>
+        <div class="modo_romance">
+            <h1>Modo Romance Activado</h1>
             <img src="img\la-estrella-de-mar-patricio-sera-el-protagonista-del-spin-of-de-bob-esponja.jpeg" alt="">
         </div>
 
